Bug 146425 - Kalzium compilation fails - incorrcet include malloc.h
Summary: Kalzium compilation fails - incorrcet include malloc.h
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Other
: NOR normal
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-06-05 21:32 UTC by jeremyhu
Modified: 2007-06-07 13:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jeremyhu 2007-06-05 21:32:43 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.0.1 
OS:                OS X

stdlib.h is the correct include to get malloc(), not malloc.h

[ 64%] Building CXX object marble/src/lib/CMakeFiles/marblewidget.dir/kml/KMLFeature.o
/Users/jeremy/src/kde-svn/trunk/KDE/kdeedu/kalzium/compoundviewer/openbabel2wrapper.cpp:24:20: error: malloc.h: No such file or directory

Index: kalzium/compoundviewer/openbabel2wrapper.cpp
===================================================================
--- kalzium/compoundviewer/openbabel2wrapper.cpp	(revision 671896)
+++ kalzium/compoundviewer/openbabel2wrapper.cpp	(working copy)
@@ -21,7 +21,7 @@
 #include <iostream>
 #include <fstream>
 #include <string.h>
-#include <malloc.h>
+#include <stdlib.h>
 
 #include <QMouseEvent>
 #include <QLayout>
Comment 1 cniehaus 2007-06-07 13:06:28 UTC
SVN commit 672520 by cniehaus:

BUG:146425

 M  +1 -1      openbabel2wrapper.cpp  


--- trunk/KDE/kdeedu/kalzium/compoundviewer/openbabel2wrapper.cpp #672519:672520
@@ -21,7 +21,7 @@
 #include <iostream>
 #include <fstream>
 #include <string.h>
-#include <malloc.h>
+#include <stdlib.h>
 
 #include <QMouseEvent>
 #include <QLayout>