BUG:146425

svn path=/trunk/KDE/kdeedu/kalzium/; revision=672520