compoundviewer/openbabel2wrapper.cpp
@@ -21,7 +21,7 @@
 #include <iostream>
 #include <fstream>
 #include <string.h>
-#include <malloc.h>
+#include <stdlib.h>
 
 #include <QMouseEvent>
 #include <QLayout>
